tests/frontend/fail/array/atomic_array_assignment.act
constructor of B
interface constructor()

creates

  uint x := [1]
